--- a/app/views/users/post/show.html.erb
+++ b/app/views/users/post/show.html.erb
@@ -1,2 +1,47 @@
 <h1>Users::Post#show</h1>
 <p>Find me in app/views/users/post/show.html.erb</p>
+<p>住所</p>
+<p><%= @post.address %></p>
+
+<div id="map"></div>
+
+<style>
+#map{
+  height: 150px;
+  width:270px;
+}
+</style>
+
+
+
+<script type="text/javascript">
+    function initMap() {
+
+        var test ={lat: <%= @post.latitude %>, lng: <%= @post.longitude %>};
+        var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 15,
+            center: test
+        });
+        var transitLayer = new google.maps.TransitLayer();
+        transitLayer.setMap(map);
+
+        var contentString = '住所：<%= @post.address %>';
+        var infowindow = new google.maps.InfoWindow({
+            content: contentString
+        });
+
+        var marker = new google.maps.Marker({
+            position:test,
+            map: map,
+            title: contentString
+        });
+
+        marker.addListener('click', function() {
+            infowindow.open(map, marker);
+        });
+    }
+</script>
+
+<script async defer
+        src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap">
+</script>
