--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
           <% if user_signed_in? %>
            <nav>
              <ul class="nav navbar-nav navbar-right">
-               <li class="user-li"><%= link_to "マイページ", users_post_index_path,class: "Editlink" %></li>
+               <li class="user-li"><%= link_to "マイページ", users_user_path(current_user),class: "Editlink" %></li>
                <li class="user-li"><%= link_to "記事一覧", users_post_index_path,class: "Editlink" %></li>
                <li class="user-li"><%= link_to "枚方", users_facilities_path,class: "Editlink" %></li>
                <li class="user-li"><%= link_to "新規投稿", new_users_post_path,class: "Editlink" %></li>
@@ -37,7 +37,7 @@
                 <li><%= link_to "about", users_about_path,class: "Editlink" %></li>
                 <li><%= link_to "Sign Up", new_user_registration_path,class: "Editlink" %></li>
                 <li><%= link_to "Log In", new_user_session_path,class: "Editlink" %></li>
-                <li><%= link_to "ゲストログイン", users_guest_sign_in_path,class: "Editlink" %></li>
+                <li><%= link_to "ゲストログイン", users_guest_sign_in_path, method: :post, class: "Editlink" %></li>
               </ul>
             </nav>
           <% end %>
