--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -1,2 +1,26 @@
-<h1>Users::Users#show</h1>
-<p>Find me in app/views/users/users/show.html.erb</p>
+
+
+<div class="row">
+  <div class="col-md-9 col-md-push-3">
+    <h2>投稿一覧</h2>
+    <div class="box">
+      <% @user.posts.each do |post| %>
+    	<%= link_to users_post_path(post) do %>
+      	  <%= attachment_image_tag post, :image, class:"img-square",fallback: "no_image.jpg",size:"10×10" %>
+      	<% end %>
+   	   <h3><%= post.title %></h3>
+      <% end %>
+    </div>
+  </div>
+  <div class="col-xs-3 col-md-pull-9">
+  	<h2>プロフィール</h2>
+  	<div>
+  		<%= attachment_image_tag @user, :image_id, class:"img-square",fallback: "no_image.jpg",size:"10×10" %>
+  	</div>
+
+  	  <div>name
+  	  	<%= @user.name %></div>
+  	  <div>introduction
+  	  	<%= @user.introduction %></div>
+  </div>
+</div>
