--- a/app/views/users/post/show.html.erb
+++ b/app/views/users/post/show.html.erb
@@ -2,6 +2,16 @@
 <p>住所</p>
 <p><%= @post.address %></p>
 
+<% if user_signed_in? %>
+    <% if @post.favorited_by?(current_user) %> <!-- ログインしているユーザーがファボしたかどうかで分岐 -->
+        <p><span>お気に入り解除: </span><%=link_to @post.favorites.count, users_post_favorites_path(@post.id), method: :delete %></p>
+    <% else %>
+        <p><span>お気に入り登録: </span><%=link_to @post.favorites.count, users_post_favorites_path(@post.id), method: :post %></p>
+    <% end %>
+  <% else %>
+    <p><span>お気に入り数: </span><%= @post.favorites.count %></p>
+  <% end %>
+
 <div id="map"></div>
 
 <style>
