--- a/app/views/users/post/show.html.erb
+++ b/app/views/users/post/show.html.erb
@@ -12,6 +12,14 @@
     <p><span>お気に入り数: </span><%= @post.favorites.count %></p>
   <% end %>
 
+  <% if current_user != @post.user %>
+        <% if @post.user.followed_by?(current_user) %>
+            <p><%=link_to "フォロー済み", users_user_relationships_path(@post.user.id), method: :delete %></p>
+        <% else %>
+            <p><%=link_to "フォローする", users_user_relationships_path(@post.user.id), method: :post %></p>
+        <% end %>
+    <% end %>
+
 <div id="map"></div>
 
 <style>
