投稿編集機能、ユーザー編集機能

--- a/app/views/users/post/edit.html.erb
+++ b/app/views/users/post/edit.html.erb
@@ -1,2 +1,51 @@
 <h1>Users::Post#edit</h1>
 <p>Find me in app/views/users/post/edit.html.erb</p>
+<%= form_with model:@post, url: users_post_path, local:true do |f| %>
+  <div class="row">
+  	<div class="col-xs-10">
+  	  <table class="table">
+  	  	<thead>
+  	  	<tr>
+  	  	  <th>
+  	  	  	<%= attachment_image_tag @post, :image, class:"img-square",fallback: "no_image.jpg",size:"100×100" %>
+  	  	  </th>
+  	  	  <th>
+  	  	  	<div>
+  	  	  	  <%= f.attachment_field :image %>
+  	  	  	</div>
+  	  	  </th>
+  	  	</tr>
+  	  	<tr>
+  	      <th>
+  	      	<%= f.label :"タイトル" %>
+  	      </th>
+  	      <th>
+  	      	<%= f.text_field :title, placeholder: "タイトル" %>
+  	      </th>
+  	  	</tr>
+  	  	<tr>
+  	  	  <th>
+  	  	  	<%= f.label :"内容" %>
+  	  	  </th>
+  	  	  <th>
+  	  	  	<%= f.text_area :body, placeholder: "内容" %>
+  	  	  </th>
+  	  	</tr>
+  	  	<tr>
+  	  	  <th>
+  	  		<%= f.label :"住所" %>
+  	  	  </th>
+  	  	  <th>
+  	  	  	<%= f.text_area :address, placeholder: "住所" %>
+  	  	  </th>
+  	  	</tr>
+  	  	<tr>
+  	  	  <th>
+  	  	  	<%= f.submit "更新" %>
+  	  	  </th>
+  	  	</tr>
+  	  </thead>
+  	  </table>
+  	</div>
+  </div>
+<% end %>
