--- a/app/views/users/post/index.html.erb
+++ b/app/views/users/post/index.html.erb
@@ -6,7 +6,7 @@
     <div class="col-md-4">
       <div class="box">
       	<%= link_to users_post_path(p) do %>
-      	  <%= attachment_image_tag p, :image, class:"img-square",fallback: "no_image.jpg",size:"100×100" %>
+      	  <%= attachment_image_tag p, :image, :fill, 300, 300, fallback: "no_image.jpg",size:"100×100" %>
       	<% end %>
       <div><%= p.title %></div>
       <div><%= link_to "詳細",users_post_path(p), class: "btn btn-success" %></div>
