--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -6,21 +6,39 @@
     <div class="box">
       <% @user.posts.each do |post| %>
     	<%= link_to users_post_path(post) do %>
-      	  <%= attachment_image_tag post, :image, class:"img-square",fallback: "no_image.jpg",size:"10×10" %>
+      	  <%= attachment_image_tag post, :image, :fill, 300, 300, fallback: "no_image.jpg",size:"10×10" %>
       	<% end %>
    	   <h3><%= post.title %></h3>
+   	   <div><%= link_to "編集する",edit_users_post_path(post), class: "btn btn-success" %></div>
+      <% end %>
+    </div>
+    <div class="box2">
+      <% @favorite_posts.each do |favorite| %>
+      <div>
+        <%= favorite.title %>
+      </div>
+      <div>
+      	<%= attachment_image_tag favorite, :image, :fill, 300, 300, fallback: "no_image.jpg",size:"10×10" %>
+      </div>
       <% end %>
     </div>
   </div>
   <div class="col-xs-3 col-md-pull-9">
   	<h2>プロフィール</h2>
   	<div>
-  		<%= attachment_image_tag @user, :image_id, class:"img-square",fallback: "no_image.jpg",size:"10×10" %>
+  		<%= attachment_image_tag @user, :image, :fill, 100, 100, fallback: "no_image.jpg",size:"10×10" %>
   	</div>
 
   	  <div>name
   	  	<%= @user.name %></div>
   	  <div>introduction
   	  	<%= @user.introduction %></div>
+  	  <div>
+  	  	フォロー数<%= @user.followings.count %>
+  	  </div>
+  	  <div>
+  	  	フォロワー数<%= @user.followers.count %>
+  	  </div>
+  	  <div><%= link_to "編集する",edit_users_user_path(current_user), class: "btn btn-success" %></div>
   </div>
 </div>
