マイページ修正、削除機能作成

--- a/app/views/users/post/edit.html.erb
+++ b/app/views/users/post/edit.html.erb
@@ -44,6 +44,11 @@
   	  	  	<%= f.submit "更新" %>
   	  	  </th>
   	  	</tr>
+        <tr>
+          <th>
+            <%= link_to '削除', users_post_path, method: :delete, class: "btn btn-danger" %>
+          </th>
+        </tr>
   	  </thead>
   	  </table>
   	</div>
