--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -33,12 +33,28 @@
   	  	<%= @user.name %></div>
   	  <div>introduction
   	  	<%= @user.introduction %></div>
-  	  <div>
-  	  	フォロー数<%= @user.followings.count %>
+  	  <div>フォロー数
+        <%= link_to follows_users_user_path do %>
+  	  	  <%= @user.followings.count %>
+        <% end %>
   	  </div>
-  	  <div>
-  	  	フォロワー数<%= @user.followers.count %>
+  	  <div>フォロワー数
+        <%= link_to followers_users_user_path do %>
+  	  	  <%= @user.followers.count %>
+        <% end %>
   	  </div>
-  	  <div><%= link_to "編集する",edit_users_user_path(current_user), class: "btn btn-success" %></div>
+      <% if @user == current_user %>
+  	    <div>
+          <%= link_to "編集する",edit_users_user_path(current_user), class: "btn btn-success" %>
+        </div>
+      <% else %>
+        <div>
+          <% if @user.followed_by?(current_user) %>
+            <p><%=link_to "フォロー外す", users_user_relationships_path(@user.id), method: :delete, class: "btn btn-warning" %></p>
+        <% else %>
+            <p><%=link_to "フォローする", users_user_relationships_path(@user.id), method: :post, class: "btn btn-info" %></p>
+        <% end %>
+        </div>
+      <% end %>
   </div>
 </div>
