--- a/app/views/users/post/show.html.erb
+++ b/app/views/users/post/show.html.erb
@@ -1,4 +1,7 @@
 
+
+
+<%= attachment_image_tag @post, :image, :fill, 300, 300, fallback: "no_image.jpg",size:"100×100" %>
 <p>住所</p>
 <p><%= @post.address %></p>
 
@@ -11,6 +14,12 @@
   <% else %>
     <p><span>お気に入り数: </span><%= @post.favorites.count %></p>
   <% end %>
+
+  <strong>投稿者
+    <%= link_to users_user_path(@post.user) do %>
+      <%= @post.user.name %>
+    <% end %>
+  </strong>
 
   <% if current_user != @post.user %>
         <% if @post.user.followed_by?(current_user) %>
