--- a/app/views/users/users/follows.html.erb
+++ b/app/views/users/users/follows.html.erb
@@ -1,13 +1,34 @@
-follows.html.erb
-
-<% @users.each do |user| %>
-  <hr>
-  <p><span>name: </span><%= link_to user.name, users_user_path(user.id) %></p>
-    <% if current_user != user %>
-        <% if user.followed_by?(current_user) %>
+<table class="table table-striped">
+  <tr>
+  	<th>ユーザー画像</th>
+  	<th></th>
+  	<th></th>
+    <th></th>
+  </tr>
+  <% @users.each do |user| %>
+  <tr>
+  	<td>
+  	  <%= attachment_image_tag @user, :image, :fill, 100, 100, fallback: "no_image.jpg",size:"10×10" %>
+  	</td>
+  	<td>
+  	  <p><span>name: </span><%= link_to user.name, users_user_path(user.id) %></p>
+  	</td>
+    <td>
+      フォロー数<%= user.followings.count %>
+      フォロワー数<%= user.followers.count %>
+    </td>
+    <td>
+      <%= link_to "ユーザーをみにいく", users_user_path(user), class: "btn-sm btn-success" %>
+    </td>
+  	<% if current_user != user %>
+  	<td>
+  		<% if user.followed_by?(current_user) %>
             <p><%=link_to "フォロー済み", users_user_relationships_path(user.id), method: :delete %></p>
         <% else %>
             <p><%=link_to "フォローする", users_user_relationships_path(user.id), method: :post %></p>
         <% end %>
-    <% end %>
-<% end %>
+  	</td>
+  	<% end %>
+    </tr>
+	<% end %>
+</table>
