コメント機能修正

--- a/app/views/users/post/show.html.erb
+++ b/app/views/users/post/show.html.erb
@@ -87,7 +87,7 @@
 <% @post.post_comments.each do |post_comment| %>
   <tr>
     <td>
-        <%#= post_comment.user.name %>
+        <%= post_comment.user.name %>
     </td>
     <td>
         <%= post_comment.comment %>
