--- a/app/views/users/post/show.html.erb
+++ b/app/views/users/post/show.html.erb
@@ -5,15 +5,16 @@
 <p>住所</p>
 <p><%= @post.address %></p>
 
-<% if user_signed_in? %>
-    <% if @post.favorited_by?(current_user) %> <!-- ログインしているユーザーがファボしたかどうかで分岐 -->
-        <p><span>お気に入り解除: </span><%=link_to @post.favorites.count, users_post_favorites_path(@post.id), method: :delete %></p>
-    <% else %>
-        <p><span>お気に入り登録: </span><%=link_to @post.favorites.count, users_post_favorites_path(@post.id), method: :post %></p>
-    <% end %>
-  <% else %>
-    <p><span>お気に入り数: </span><%= @post.favorites.count %></p>
-  <% end %>
+
+<div id="favorites_buttons_<%= @post.id %>">
+  <%= render partial: 'users/favorites/favorite', locals: { post: @post} %>
+</div>
+<!-- locals:{}の中身は@postをpostに入れてpostを_favorite.htmlで使えるようにするため。
+partialとlocalsを消しても非同期は使える。その時は_favorite.htmlのpostを@postに変えて、create.jsのpartialとlocalsも消したらうまくいく。
+<%= @post.id %>の部分はネストされてるからpost.idも必要ってこと？ -->
+
+
+
 
   <strong>投稿者
     <%= link_to users_user_path(@post.user) do %>
