--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -12,6 +12,8 @@
    	   <div><%= link_to "編集する",edit_users_post_path(post), class: "btn btn-success" %></div>
       <% end %>
     </div>
+    ------------------------------------------------
+    <h2>お気に入り一覧</h2>
     <div class="box2">
       <% @favorite_posts.each do |favorite| %>
       <div>
