--- a/app/views/admins/facilities/index.html.erb
+++ b/app/views/admins/facilities/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Admins::Facilities#index</h1>
-<p>Find me in app/views/admins/facilities/index.html.erb</p>
+<h2>おすすめ施設一覧</h2>
+
+
+<div class="row">
+  <% @facilities.each do |f| %>
+    <div class="col-md-4">
+      <div class="box">
+      	<%= link_to admins_facility_path(f) do %>
+      	  <%= attachment_image_tag f, :image, :fill, 300, 300, fallback: "no_image.jpg",size:"100×100" %>
+      	<% end %>
+      <div><%= f.name %></div>
+      <div><%= link_to "詳細",admins_facility_path(f), class: "btn btn-success" %></div>
+      </div>
+    </div>
+  <% end %>
+</div>
