コメント非同期

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@
 @import url('https://fonts.googleapis.com/css?family=Sacramento');
 
 *{
-font-family: 'M PLUS Rounded 1c', sans-serif;
+font-family: 'Sawarabi Mincho', sans-serif;
 	position: relative; z-index:1;
 
 }
