--- a/app/views/users/post_comments/destroy.js.erb
+++ b/app/views/users/post_comments/destroy.js.erb
@@ -1,1 +1,1 @@
-$("#comments_area").html("<%= j(render partial: 'users/post_comments/index, locals: { post_comments: @post.comment }) %>")
+$("#comments_area").html("<%= j(render partial: 'index', locals: { post_comments: @post.post_comments }) %>")
