--- a/app/views/users/notifications/_notification.html.erb
+++ b/app/views/users/notifications/_notification.html.erb
@@ -1,13 +1,46 @@
-<% visiter = notification.visiter %>
-<% item = notification.item %>
+<% visitor = notification.visitor %>
+<% visited = notification.visited %>
+<div class="col-md-6 mx-auto">
+  <div class="form-inline">
+    <span>
+      <%= link_to users_user_path(visitor) do %>
+        <strong>
+          <%= visitor.name %>
+        </strong>
+      <% end %>
+      <%= 'さんが' %>
 
-<div class="user-view clearfix ">
-  <%= link_to users_user_path(notification.visiter) do %>
-    <%= attachment_image_tag visiter, :profile_image, :fill,100,100, format: "jpeg", fallback: "no_image.jpg", size: "50x50", class:"profile-img-circle" %>
-  <% end %>
-  <%= notification_form(notification) %><span class="moderate-font"><%= " (#{time_ago_in_words(notification.created_at)} 前)" %></span>
-  <br>
-  <% if !@comment.nil? %>
-    <p class="moderate-font text-center" style="color: #C0C0C0;"><%= @comment %></p>
-  <% end %>
+      <% case notification.action %>
+      <% when 'follow' then %>
+        <%= "あなたをフォローしました" %>
+      <% when 'like' then %>
+      　<%= link_to users_post_path(notification.post) do %>
+        　　<%= "あなたの投稿" %>
+        <% end %>
+        <%= "にいいねしました" %>
+      <% when 'comment' then %>
+        <% if notification.post.user_id == visited.id %>
+          <%= link_to users_post_path(notification.post) do %>
+            <%= "あなたの投稿" %>
+          <% end %>
+          <%= "にコメントしました" %>
+        <% else %>
+          <span>
+            <%= link_to users_post_path(notification.post) do %>
+              <strong>
+                <%= notification.post.user.name + 'さんの投稿' %>
+              </strong>
+            <% end %>
+        <%= "にコメントしました" %>
+        <p class="text-muted mb-0">
+          <%= PostComment.find_by(id: notification.post_comment_id)&.post_comment %>
+        </p>
+        <% end %>
+    </span>
+
+  <div class="small text-muted text-right">
+    <%= time_ago_in_words(notification.created_at).upcase %>
+  </div>
+  </div>
 </div>
+<% end %>
