--- a/app/views/users/relationships/_relationship.html.erb
+++ b/app/views/users/relationships/_relationship.html.erb
@@ -1,9 +1,11 @@
-    <% if post.user.followed_by?(current_user) %>
-        <p><%=link_to "フォロー済み", users_user_relationships_path(user_id: post.user.id, post_id: post.id), method: :delete, remote: :true, class:"btn btn-raised btn-info" %></p>
+    <% if user.followed_by?(current_user) %>
+        <p><%=link_to "フォロー済み", users_user_relationships_path(user_id: user.id), method: :delete, remote: :true, class:"btn btn-raised btn-info" %></p>
     <% else %>
-        <p><%=link_to "フォローする", users_user_relationships_path(user_id: post.user.id, post_id: post.id), method: :post, remote: :true, class:"btn btn-outline-info" %></p>
+        <p><%=link_to "フォローする", users_user_relationships_path(user_id: user.id), method: :post, remote: :true, class:"btn btn-outline-info" %></p>
     <% end %>
 <!-- remote: :trueと記述ないとdefaultでlocal: :trueとなってしまうから記述が必要。
 フォローするとフォロー済みのボタンでエラー文からuser_idはparameterで渡されてたけど、
 post_idがない！というエラーが出てたので、user_idはこう、post_idはこう、と分けて記述してあげる。
  -->
+
+<!-- ①ここが全てpost.userとかになってしまっていたのでそこを全てuser単体にした。=>usersのshowへ。 -->
