データ可視化(user登録数)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,7 @@
           <a class="list-group-item"><%= link_to "記事一覧", users_post_index_path %></a>
           <a class="list-group-item"><%= link_to "新規投稿", new_users_post_path %></a>
           <a class="list-group-item"><%= link_to "枚方", users_facilities_path %></a>
+          <a class="list-group-item"><%= link_to "通知", users_notifications_path %></a>
           <a class="list-group-item"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></a>
         </ul>
 
