--- a/app/views/users/relationships/_relationship.html.erb
+++ b/app/views/users/relationships/_relationship.html.erb
@@ -9,3 +9,7 @@ post_idがない！というエラーが出てたので、user_idはこう、pos
  -->
 
 <!-- ①ここが全てpost.userとかになってしまっていたのでそこを全てuser単体にした。=>usersのshowへ。 -->
+<!-- relationshipとuserの関係がpostを通してになってしまっていた。
+人と人との関係なのにpostを経由するのはおかしい。面倒なことをやってしまっている。
+そこを改善するところからスタート。
+ -->
