--- a/app/views/users/users/follows.html.erb
+++ b/app/views/users/users/follows.html.erb
@@ -23,11 +23,9 @@
     </td>
   	<% if current_user != user %>
   	<td>
-  		<% if user.followed_by?(current_user) %>
-            <p><%=link_to "フォロー済み", users_user_relationships_path(user.id), method: :delete, class:"btn btn-raised btn-info" %></p>
-        <% else %>
-            <p><%=link_to "フォローする", users_user_relationships_path(user.id), method: :post, class:"btn btn-outline-info" %></p>
-        <% end %>
+  		<div id="follow_buttons_<%= user.id %>">
+          <%= render partial: 'users/relationships/relationship', locals: { user: user } %>
+      </div>
   	</td>
   	<% end %>
     </tr>
