--- a/app/views/users/notifications/_notification.html.erb
+++ b/app/views/users/notifications/_notification.html.erb
@@ -27,7 +27,7 @@
     </span>
 
   <div class="small text-muted text-right">
-    <%= time_ago_in_words(notification.created_at).upcase %> ago
+    <%= time_ago_in_words(notification.created_at).upcase %>前
   </div>
   </div>
 </div>
