--- a/app/views/users/post/edit.html.erb
+++ b/app/views/users/post/edit.html.erb
@@ -1,4 +1,5 @@
 <%= form_with model:@post, url: users_post_path, local:true do |f| %>
+<%= render 'layouts/error_messages', model: f.object %>
   <div class="row">
   	<div class="col-xs-10">
   	  <table class="table">
