--- a/app/views/users/post/show.html.erb
+++ b/app/views/users/post/show.html.erb
@@ -1,7 +1,8 @@
 <div class="row">
 <div class="col-xs-6">
 <h1><strong><%= @post.title %></strong></h1>
-<%= attachment_image_tag @post, :image, :fill, 700, 500, fallback: "no_image.jpg",size:"100×100" %>
+<%= attachment_image_tag @post, :image, :fill, 500, 500, fallback: "no_image.jpg",size:"100×100" %>
+<%= @post.body %>
 
 <strong>閲覧数:</strong>
   <%= @post.impressions_count %>
