--- a/app/views/users/post/index.html.erb
+++ b/app/views/users/post/index.html.erb
@@ -1,75 +1,103 @@
-<h2>投稿一覧</h2>
+<div class="a card mt-5">
+<h3 class="mt-5 ml-5">
+  <span class="badge badge-pill badge-primary">投稿一覧</span>
+</h3>
 
 <div class="row">
-  <% @posts.each do |p| %>
-    <div class="col-4">
-      <div class="box">
+  <div class="row col-md-8 col-sm-12">
+    <% @posts.each do |p| %>
+    <div class="col-12 col-md-4">
+      <div class="card mt-5 ml-5" style="width: 100%;">
         <%= link_to users_post_path(p) do %>
-          <%= attachment_image_tag p, :image, :fill, 250, 250, fallback: "no_image.jpg",size:"100×100" %>
+          <%= attachment_image_tag p, :image, :fill, 250, 250, fallback: "no_image.jpg",size:"100×100", class:"card-img-top" %>
         <% end %>
-      <div><%= p.title %></div>
-      <div><%= link_to "詳細",users_post_path(p), class: "btn btn-raised btn-primary" %></div>
+        <div class="card-body">
+          <h5 class="card-title"><%= p.title %></h5>
+          <p class="card-text line_wrap"><%= p.body %></p>
+          <%= link_to "詳細",users_post_path(p), class: "btn btn-primary" %>
+        </div>
       </div>
     </div>
-  <% end %>
-
-
-  <div class="ranking">
-  <div class="col-md-12">
-    <table class="table">
-      <h2>閲覧数ランキング！！！</h2>
-      <thead>
-        <tr>
-          <th>順位</th>
-          <th>名前</th>
-          <th>閲覧数</th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @most_viewed.each.with_index(1) do |rank, i| %>
-          <tr>
-            <td><%= "#{i}" %></td>
-            <td>
-              <%= link_to users_post_path(rank) do %>
-                <%= rank.title %>
-              <% end %>
-            </td>
-            <td><%= rank.impressions_count %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-
-    <table class="table">
-      <h2>お気に入りランキング！！！</h2>
-      <thead>
-        <tr>
-          <th>順位</th>
-          <th>名前</th>
-          <th>いいね数</th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @all_ranks.each.with_index(1) do |post, i| %>
-          <tr>
-            <td><%= "#{i}" %></td>
-            <td>
-              <%= link_to users_post_path(post) do %>
-                <%= post.title %>
-              <% end %>
-            </td>
-            <td><%= post.favorites.count %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
+    <% end %>
   </div>
+
+
+  <div class="col-md-4 col-sm-12">
+    <div class="ml-5 mt-5">
+      <div class="card">
+      <span class="badge badge-primary">閲覧数ランキング</span>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>順位</th>
+            <th>名前</th>
+            <th>閲覧数</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% @most_viewed.each.with_index(1) do |rank, i| %>
+            <tr>
+              <td><%= "#{i}" %></td>
+              <td>
+                <%= link_to users_post_path(rank) do %>
+                  <%= rank.title %>
+                <% end %>
+              </td>
+              <td><%= rank.impressions_count %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="mt-5">
+    <div class="card">
+      <span class="badge badge-primary">お気に入りランキング</span>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>順位</th>
+            <th>名前</th>
+            <th>いいね数</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% @all_ranks.each.with_index(1) do |post, i| %>
+            <tr>
+              <td><%= "#{i}" %></td>
+              <td>
+                <%= link_to users_post_path(post) do %>
+                  <%= post.title %>
+                <% end %>
+              </td>
+              <td><%= post.favorites.count %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    </div>
+    </div>
   </div>
+</div>
+
+<%= paginate @posts %>
+
 </div>
 
 
 
+<style>
+.a {
+  background-color: ;
+}
 
-<%= paginate @posts %>
+.line_wrap {
+  overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+}
+</style>
