--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,6 @@
-<h2>Sign up</h2>
+<div class="card mx-auto mt-5" style="width: 50%;">
+  <div class="card-body mx-auto">
+    <h2>Sign Up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
@@ -34,3 +36,6 @@
 <% end %>
 
 <%= render "users/shared/links" %>
+
+  </div>
+</div>
