--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -1,46 +1,58 @@
-
-
 <div class="row">
-  <div class="col-md-9 col-md-push-3">
-    <h2>投稿一覧</h2>
-    <div class="box">
-      <% @user.posts.each do |post| %>
-    	<%= link_to users_post_path(post) do %>
-      	  <%= attachment_image_tag post, :image, :fill, 300, 300, fallback: "no_image.jpg",size:"10×10" %>
-      	<% end %>
-   	   <h3><%= post.title %></h3>
-   	   <div><%= link_to "編集する",edit_users_post_path(post), class: "btn btn-outline-success" %></div>
+  <div class="row col-md-4">
+    <div class="col-12">
+      <div class="card mt-5" style="width: 100%; ">
+        <div class="card-body">
+        <div id="follow_count_<%= @user.id %>">
+          <%= render partial: "profile", user: @user %>
+        </div>
+        <% if @user == current_user %>
+        <div>
+          <%= link_to "編集する",edit_users_user_path(current_user), class: "btn btn-outline-success" %>
+        </div>
+        <% else %>
+        <div id="follow_buttons_<%= @user.id %>">
+          <%= render partial: 'users/relationships/relationship', locals: { user: @user } %>
+        </div>
       <% end %>
     </div>
-    ------------------------------------------------------------------------------------------------------------------------
+  </div>
+</div>
+</div>
+
+<div class="col-md-8">
+  <h2>投稿一覧</h2>
+  <div class="card">
+  <% @user.posts.each do |post| %>
+    <%= link_to users_post_path(post) do %>
+      <%= attachment_image_tag post, :image, :fill, 100, 100, fallback: "no_image.jpg",size:"10×10" %>
+    <% end %>
+    <div class="card-body">
+          <h5 class="card-title"><%= post.title %></h5>
+          <% if @user == current_user %>
+            <div><%= link_to "編集する",edit_users_post_path(post), class: "btn btn-outline-success" %></div>
+          <% end %>
+    <% end %>
+  </div>
+</div>
+</div>
+
+<div class="col-md-8">
     <h2>お気に入り一覧</h2>
-    <div class="box2">
+    <div class="card">
       <% @favorite_posts.each do |favorite| %>
       <div>
         <%= link_to users_post_path(favorite) do %>
       	  <%= attachment_image_tag favorite, :image, :fill, 300, 300, fallback: "no_image.jpg",size:"100×100" %>
         <% end %>
       </div>
-      <h3>
+      <div class="card-body">
+          <h5 class="card-title">
         <%= favorite.title %>
-      </h3>
+      </h5>
+    </div>
       <% end %>
     </div>
-  </div>
-  <div class="col-xs-3 col-md-pull-9">
-    <div id="follow_count_<%= @user.id %>">
-      <%= render partial: "profile", user: @user %>
-    </div>
-    <% if @user == current_user %>
-        <div>
-          <%= link_to "編集する",edit_users_user_path(current_user), class: "btn btn-outline-success" %>
-        </div>
-    <% else %>
-        <div id="follow_buttons_<%= @user.id %>">
-          <%= render partial: 'users/relationships/relationship', locals: { user: @user } %>
-        </div>
-      <% end %>
-
   </div>
 </div>
 
