--- a/app/views/users/favorites/_favorite.html.erb
+++ b/app/views/users/favorites/_favorite.html.erb
@@ -2,9 +2,9 @@
 
 <% if user_signed_in? %>
     <% if post.favorited_by?(current_user) %> <!-- ログインしているユーザーがファボしたかどうかで分岐 -->
-        <p><span>お気に入り: </span><%=link_to icon('fas', 'star'), users_post_favorites_path(post.id), method: :delete, remote: true %></p>
+        <p><span>お気に入り: </span><%=link_to '', users_post_favorites_path(post.id), method: :delete, remote: true, class:'fas fa-heart fa-2x' %></p>
     <% else %>
-        <p><span>お気に入り: </span><%=link_to icon('far', 'star'), users_post_favorites_path(post.id), method: :post, remote: true %></p>
+        <p><span>お気に入り: </span><%=link_to "", users_post_favorites_path(post.id), method: :post, remote: true, class:'far fa-heart fa-2x faa-pulse animated-hover' %></p>
     <% end %>
   <% else %>
     <p><span>お気に入り数: </span><%= post.favorites.count %></p>
