--- a/app/views/users/home/top.html.erb
+++ b/app/views/users/home/top.html.erb
@@ -7,10 +7,10 @@
           <div class="btn btn-primary btn-raised ">新規会員登録はこちら</div>
         <% end %>
           <p>or sign up with</p>
-          <a href="#" class="btn btn-primary btn-raised">
-          	<span class="fab fa-google"></span>
-          	Googleアカウントで登録
-          </a>
+            <div class="btn btn-primary btn-raised">
+          	  <span class="fab fa-google"></span>
+          	  Googleアカウントで登録
+            </div>
         </div>
     </div>
 </div>
