--- a/app/views/users/post/edit.html.erb
+++ b/app/views/users/post/edit.html.erb
@@ -45,7 +45,7 @@
   	  	</tr>
         <tr>
           <th>
-            <%= link_to '削除', users_post_path, method: :delete, class: "btn btn-danger" %>
+            <%= link_to '削除', users_post_path, method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn btn-danger" %>
           </th>
         </tr>
   	  </thead>
