--- a/app/views/users/post/index.html.erb
+++ b/app/views/users/post/index.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: 'layouts/flash' %>
+
 <div class="a card mt-5">
 <h3 class="mt-5 ml-5">
   <span class="badge badge-pill badge-primary">投稿一覧</span>
