--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -19,7 +19,9 @@
 <% end %>
 
 <%- if devise_mapping.omniauthable? %>
+<div class="btn btn-outline-primary">
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
+    <%= link_to "Googleアカウントで新規登録", omniauth_authorize_path(resource_name, provider), class: "fab fa-google" %><br />
   <% end %>
+</div>
 <% end %>
