--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -58,5 +58,23 @@
   </div>
 </div>
 
+<h1>ユーザー詳細</h1>
+
+<h2><%= @user.email %></h2>
+
+<% if @user.id == current_user.id %>
+
+<% else %>
+  <% if @isRoom == true %>
+    <%= link_to "チャットへ",users_room_path(@roomId) %>
+  <% else %>
+    <%= form_with model:@room, url: users_rooms_path, local: true do |f| %>
+      <%= fields_for @entry do |e| %>
+        <%= e.hidden_field :user_id, :value=> @user.id %>
+      <% end %>
+      <%= f.submit "チャットを始める" %>
+    <% end %>
+  <% end %>
+<% end %>
 
 
