--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,6 +63,13 @@
 
 footer{
   height: 65px;
-  position: absolute;
-  bottom: 0;
+  width: 100%;
+  // position: absolute;
+  // bottom: 0;
+  text-align: center;
 }
+
+
+
+
+
