--- a/app/views/users/post_comments/_index.html.erb
+++ b/app/views/users/post_comments/_index.html.erb
@@ -1,3 +1,5 @@
+<div class="col-sm-6">
+
 <table class="table">
   <tr>
     <th>ユーザー名</th>
@@ -20,3 +22,5 @@
   </tr>
 <% end %>
 </table>
+
+</div>
