ooter post/new修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -92,6 +92,7 @@
     </div>
 
       <footer>
+          Copyright (C) 2020 HiraPedia. All Rights Reserved.</br>
           <a class="insta"href="https://www.instagram.com/?hl=ja"><i class="fab fa-instagram"></i></a>
           <a href="https://twitter.com/login?lang=ja"><i class="fab fa-twitter"></i></a>
           <a class="youtube" href="https://www.youtube.com/user/YouTubeJapan"><i class="fab fa-youtube"></i></a>
