--- a/app/views/users/inquiry/index.html.erb
+++ b/app/views/users/inquiry/index.html.erb
@@ -16,11 +16,11 @@
 
   <table class="table">
     <tr>
-      <th>名前<span class="text-danger">（必須）</span></th>
+      <th>名前<span class="badge badge-danger">必須</span></th>
       <td><%= f.text_field :name %></td>
     </tr>
     <tr>
-      <th>メールアドレス<span class="text-danger">（必須）</span></th>
+      <th>メールアドレス<span class="badge badge-danger">必須</span></th>
       <td><%= f.text_field :email %></td>
     </tr>
     <tr>
