--- a/app/views/users/post/new.html.erb
+++ b/app/views/users/post/new.html.erb
@@ -9,7 +9,7 @@
   	  	<thead>
   	  	<tr>
   	  	  <th>
-  	  	  	<%= f.label :"画像" %>
+  	  	  	<%= f.label :"画像" %><span class="badge badge-danger">必須</span>
   	  	  </th>
   	  	  <th>
   	  	  	<div>
@@ -25,7 +25,7 @@
   	  	</tr>
   	  	<tr>
   	      <th>
-  	      	<%= f.label :"タイトル" %>
+  	      	<%= f.label :"タイトル" %><span class="badge badge-danger">必須</span>
   	      </th>
   	      <th>
               <div class="form-group">
@@ -47,7 +47,7 @@
   	  	</tr>
   	  	<tr>
   	  	  <th>
-  	  		<%= f.label :"住所" %>
+  	  		<%= f.label :"住所" %><span class="badge badge-danger">必須</span>
   	  	  </th>
   	  	  <th>
               <div class="form-group">
