--- a/app/views/users/home/top.html.erb
+++ b/app/views/users/home/top.html.erb
@@ -6,13 +6,31 @@
         <%= link_to new_user_registration_path do %>
           <div class="btn btn-primary btn-raised ">新規会員登録はこちら</div>
         <% end %>
-          <p>or sign up with</p>
-            <div class="btn btn-primary btn-raised">
-          	  <span class="fab fa-google"></span>
-          	  Googleアカウントで登録
-            </div>
         </div>
+    <div class="top">
+      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="/assets/hirakata.jpg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="/assets/a.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="/assets/HiraPedia-logo.png" alt="Third slide">
+          </div>
+        </div>
+      <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+      </div>
     </div>
+  </div>
 </div>
 <div class="lesson-wrapper">
 	<div class="container">
